[metadata]
name = urm
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH-libs/urm.py
description = Unrelational mapper. Saves and loads data not only from key-value storages.
long_description = file: ReadMe.md
keywords = urm
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = urm
install_requires =
	transformerz @ git+https://github.com/KOLANICH-libs/transformerz.py.git
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
